// Hotel Booking Platform — ER Diagram
// Paste at https://dbdiagram.io/d to render

// ─── Auth & Users ───────────────────────────────────────────────

Table users {
  id uuid [pk]
  email text [unique, not null]
  full_name text [not null]
  phone text
  avatar_url text
  status text [not null, default: 'active', note: 'active | suspended | banned']
  preferred_locale text [not null, default: 'th', note: 'th | en']
  preferred_currency text [not null, default: 'THB', note: 'THB | USD']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table user_roles {
  user_id uuid [pk, ref: > users.id]
  role text [pk, note: 'guest | host | admin']
}

Table host_profiles {
  id uuid [pk]
  user_id uuid [unique, ref: > users.id]
  business_name text
  tax_id text [note: 'encrypted via pgcrypto']
  opn_connect_id text
  stripe_connect_id text
  commission_rate decimal [not null, default: 0.15]
  verified boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
}

// ─── Properties ─────────────────────────────────────────────────

Table properties {
  id uuid [pk]
  host_id uuid [not null, ref: > host_profiles.id]
  slug text [unique, not null]
  type text [not null, note: 'hotel | resort | condo | rental_house']
  status text [not null, default: 'draft', note: 'draft | pending_review | active | suspended | archived']
  booking_mode text [not null, default: 'instant', note: 'instant | request']
  payment_policy text [not null, default: 'full_upfront', note: 'full_upfront | deposit | monthly']
  cancellation_policy text [not null, default: 'moderate', note: 'flexible | moderate | strict | non_refundable']
  channex_property_id text [note: 'null = platform-only']
  pet_friendly boolean [not null, default: false]
  location geography [not null, note: 'POINT 4326']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table property_translations {
  id uuid [pk]
  property_id uuid [not null, ref: > properties.id]
  locale text [not null, note: 'th | en']
  name text [not null]
  description text [not null]
  address text [not null]
  city text [not null]
  province text [not null]

  indexes {
    (property_id, locale) [unique]
  }
}

Table property_photos {
  id uuid [pk]
  property_id uuid [not null, ref: > properties.id]
  cloudinary_id text [not null]
  url text [not null]
  thumbnail_url text [not null]
  sort_order int [not null, default: 0]
  alt_text text
}

Table amenities {
  id uuid [pk]
  slug text [unique, not null]
  icon text [not null]
}

Table amenity_translations {
  id uuid [pk]
  amenity_id uuid [not null, ref: > amenities.id]
  locale text [not null, note: 'th | en']
  name text [not null]

  indexes {
    (amenity_id, locale) [unique]
  }
}

Table property_amenities {
  property_id uuid [pk, ref: > properties.id]
  amenity_id uuid [pk, ref: > amenities.id]
}

// ─── Room Types ──────────────────────────────────────────────────

Table room_types {
  id uuid [pk]
  property_id uuid [not null, ref: > properties.id]
  total_units int [not null, default: 1, note: '1 for condo/house, N for hotel']
  max_guests int [not null]
  bedrooms int [not null, default: 1]
  bathrooms int [not null, default: 1]
  min_stay_nights int [not null, default: 1]
  max_stay_nights int [note: 'null = no limit']
  sort_order int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
}

Table room_type_translations {
  id uuid [pk]
  room_type_id uuid [not null, ref: > room_types.id]
  locale text [not null, note: 'th | en']
  name text [not null]
  description text

  indexes {
    (room_type_id, locale) [unique]
  }
}

Table room_type_photos {
  id uuid [pk]
  room_type_id uuid [not null, ref: > room_types.id]
  cloudinary_id text [not null]
  url text [not null]
  thumbnail_url text [not null]
  sort_order int [not null, default: 0]
}

// ─── Pricing ─────────────────────────────────────────────────────

Table room_type_pricing {
  id uuid [pk]
  room_type_id uuid [unique, not null, ref: - room_types.id]
  nightly_rate decimal [not null]
  weekly_discount decimal [not null, default: 0.00]
  monthly_discount decimal [not null, default: 0.00]
  deposit_percentage decimal [not null, default: 0.00]
  currency text [not null, default: 'THB', note: 'THB | USD']
}

Table seasonal_pricing {
  id uuid [pk]
  room_type_id uuid [not null, ref: > room_types.id]
  name text [not null]
  start_date date [not null]
  end_date date [not null]
  nightly_rate decimal [not null]

  note: 'EXCLUDE constraint prevents overlapping date ranges per room_type'
}

Table pricing_suggestions {
  id uuid [pk]
  property_id uuid [not null, ref: > properties.id]
  suggested_rate decimal [not null]
  reason text [not null]
  date_range_start date [not null]
  date_range_end date [not null]
  status text [not null, default: 'pending', note: 'pending | accepted | dismissed']
  created_at timestamptz [not null, default: `now()`]
}

// ─── Availability ────────────────────────────────────────────────

Table availability {
  id uuid [pk]
  room_type_id uuid [not null, ref: > room_types.id]
  date date [not null]
  available_count int [not null, default: 0, note: '>= 0 prevents overbooking']
  status text [not null, default: 'available', note: 'available | blocked']
  source text [not null, default: 'platform', note: 'platform | channex']

  indexes {
    (room_type_id, date) [unique]
  }
}

// ─── Promotions ──────────────────────────────────────────────────

Table promotions {
  id uuid [pk]
  code text [unique, not null]
  discount_type text [not null, note: 'percentage | fixed_amount']
  discount_value decimal [not null]
  sponsor text
  conditions jsonb [note: 'min_nights, min_amount, applicable_types, etc.']
  valid_from timestamptz [not null, default: `now()`]
  valid_until timestamptz
  max_uses int [note: 'null = unlimited']
  used_count int [not null, default: 0]
  property_id uuid [ref: > properties.id, note: 'null = platform-wide']
  is_active boolean [not null, default: true]
  created_by uuid [ref: > users.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

// ─── Bookings ────────────────────────────────────────────────────

Table bookings {
  id uuid [pk]
  property_id uuid [not null, ref: > properties.id]
  room_type_id uuid [not null, ref: > room_types.id]
  guest_id uuid [not null, ref: > users.id]
  promotion_id uuid [ref: > promotions.id, note: 'null = no promo']
  applied_promotion jsonb [note: 'snapshot of promo terms at booking time']
  check_in date [not null]
  check_out date [not null]
  guests_count int [not null]
  rooms_count int [not null, default: 1]
  status text [not null, default: 'pending_approval', note: 'pending_approval | pending_payment | confirmed | checked_in | completed | cancelled | rejected']
  booking_mode text [not null, note: 'instant | request']
  cancellation_policy text [not null, note: 'snapshot at booking time']
  payment_policy text [not null, note: 'snapshot at booking time']
  total_amount decimal [not null]
  discount_amount decimal [not null, default: 0.00]
  deposit_amount decimal
  currency text [not null, note: 'THB | USD']
  special_requests text
  approved_at timestamptz
  cancelled_at timestamptz
  cancellation_reason text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

// ─── Payments ────────────────────────────────────────────────────

Table transactions {
  id uuid [pk]
  booking_id uuid [not null, ref: > bookings.id]
  provider text [not null, note: 'opn | stripe']
  provider_tx_id text [not null]
  provider_event_id text [note: 'for webhook deduplication']
  type text [not null, note: 'charge | refund | deposit | installment']
  amount decimal [not null]
  currency text [not null, note: 'THB | USD']
  status text [not null, default: 'pending', note: 'pending | completed | failed | refunded']
  idempotency_key text [unique, not null]
  metadata jsonb [default: '{}']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (provider, provider_event_id) [unique, note: 'prevent duplicate webhook processing']
  }
}

Table payment_schedule {
  id uuid [pk]
  booking_id uuid [not null, ref: > bookings.id]
  due_date date [not null]
  amount decimal [not null]
  status text [not null, default: 'upcoming', note: 'upcoming | paid | overdue | failed']
  transaction_id uuid [ref: > transactions.id]
  created_at timestamptz [not null, default: `now()`]
}

Table payouts {
  id uuid [pk]
  host_id uuid [not null, ref: > host_profiles.id]
  booking_id uuid [not null, ref: > bookings.id]
  gross_amount decimal [not null]
  commission_amount decimal [not null]
  net_amount decimal [not null]
  currency text [not null, note: 'THB | USD']
  status text [not null, default: 'pending', note: 'pending | hold | processing | completed | failed']
  hold_until timestamptz
  processed_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

// ─── Reviews ─────────────────────────────────────────────────────

Table reviews {
  id uuid [pk]
  booking_id uuid [unique, not null, ref: - bookings.id, note: 'one review per booking']
  reviewer_id uuid [not null, ref: > users.id]
  property_id uuid [not null, ref: > properties.id]
  rating int [not null, note: '1–5']
  comment text
  host_reply text
  host_replied_at timestamptz
  is_visible boolean [not null, default: true, note: 'admin moderation flag']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz
}

// ─── Messaging ───────────────────────────────────────────────────

Table conversations {
  id uuid [pk]
  property_id uuid [not null, ref: > properties.id]
  guest_id uuid [not null, ref: > users.id]
  host_id uuid [not null, ref: > users.id]
  booking_id uuid [ref: > bookings.id, note: 'null = pre-booking inquiry']
  last_message_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (property_id, guest_id, host_id) [unique]
  }
}

Table messages {
  id uuid [pk]
  conversation_id uuid [not null, ref: > conversations.id]
  sender_id uuid [not null, ref: > users.id]
  message_body text [not null]
  message_type text [not null, default: 'text', note: 'text | image | system']
  read_at timestamptz [note: 'null = unread']
  sent_at timestamptz [not null, default: `now()`]
}

// ─── Audit ───────────────────────────────────────────────────────

Table audit_log {
  id uuid [pk]
  entity_type text [not null, note: 'booking | transaction | payout']
  entity_id uuid [not null]
  action text [not null, note: 'status_changed | amount_updated']
  old_value jsonb
  new_value jsonb
  performed_by uuid [ref: > users.id, note: 'null = system action']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (entity_type, entity_id)
  }
}
